Pre-wireframe CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Jamie Hardesty</h1>
+        <nav>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h2>INTRODUCING MY SITE</h2>
+        <p></p>
+    </main>
 </body>
 </html>
