--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
         </nav>
     </header>
     <main>
-        <h2>INTRODUCING MY SITE</h2>
-        <p></p>
+        <div>
+            <h2>INTRODUCING MY SITE</h2>
+            <p>Repurposing analytics with the aim to infiltrate new markets. Leveraging custom solutions while remembering to think outside the box. Informing growth hacking and possibly target the low hanging fruit. Utilising above the fold with the aim to create actionable insights. Amplifying dark social and then maximise share of voice. Synchronising key demographics yet think outside the box.</p>
+        </div>
+        <div class="mainbox">
+            &nbsp;
+        </div>
+        <div class="funbox">
+            <div class="funbox-child">
+                <div class="funbox-child1">&nbsp;</div>
+                <div class="funbox-child2">&nbsp;</div>
+                <div class="funbox-child3">&nbsp;</div>
+                <div class="funbox-child4">&nbsp;</div>
+            </div>
+            <div class="funbox-child-friend">
+                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            </div><!-- funbox child -->
+        </div><!-- funbox -->
     </main>
+    <footer>
+        <nav>
+            <a href="contact.html">Contact Me</a>
+        </nav>
+    </footer>
 </body>
 </html>
