Done with mirroring the wireframe

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header>
-        <h1>Jamie Hardesty</h1>
+        <h1>Jamie <span>H</span>ardesty</h1>
         <nav>
+            <a href="index.html" class="current">Home</a>
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
