Working on the About Page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meet Jamie Hardesty</title>
+    <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+    <!-- css -->
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <div id="everything">
+        <div id="not-footer">
+            <header>
+                <h1>Jamie Hardesty</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html" class="current">About</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </header>
+            <main> <!-- edit content below -->
+                <h2>Introducing My Site</h2>
+                <div class="funbox">
+                    <div class="funbox-child">
+                        <div class="funbox-child1">&nbsp;</div>
+                        <div class="funbox-child2">&nbsp;</div>
+                        <div class="funbox-child3">&nbsp;</div>
+                        <div class="funbox-child4">&nbsp;</div>
+                    </div>
+                    <div class="funbox-child-friend">
+                        <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+                    </div><!-- funbox child -->
+                </div><!-- funbox -->
+            </main> <!-- don't touch the content below -->
+        </div>
+        <footer id="footer">
+            <nav>
+                <a href="contact.html">Contact Me</a>
+            </nav>
+        </footer>
+    </div>
 </body>
 </html>
