--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Jamie <span>H</span>ardesty</h1>
+        <h1>Jamie Hardesty</h1>
         <nav>
             <a href="index.html" class="current">Home</a>
             <a href="about.html">About</a>
@@ -21,7 +21,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main> <!-- edit content below -->
         <div>
             <section>
                 <h2>Introducing My Site</h2>
@@ -44,7 +44,7 @@
                 </div><!-- funbox child -->
             </div><!-- funbox -->
         </div><!-- mainbox -->
-    </main>
+    </main> <!-- don't touch the content below -->
     <footer>
         <nav>
             <a href="contact.html">Contact Me</a>
