--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/about.css">
 </head>
 <body>
     <div id="everything">
@@ -29,12 +30,15 @@
                     <div class="funbox-child">
                         <div class="funbox-child1">&nbsp;</div>
                         <div class="funbox-child2">&nbsp;</div>
+                    </div>
+                        <div class="funbox-child-friend">
+                            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+                        </div><!-- funbox child -->
+                     <div class="funbox-child">
                         <div class="funbox-child3">&nbsp;</div>
                         <div class="funbox-child4">&nbsp;</div>
                     </div>
-                    <div class="funbox-child-friend">
-                        <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-                    </div><!-- funbox child -->
+                    
                 </div><!-- funbox -->
             </main> <!-- don't touch the content below -->
         </div>
