Completed the About page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Jamie Hardesty</title>
     <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
@@ -25,20 +27,20 @@
                 </nav>
             </header>
             <main> <!-- edit content below -->
-                <h2>Introducing My Site</h2>
+                <h2>Who Am I?</h2>
                 <div class="funbox">
-                    <div class="funbox-child">
-                        <div class="funbox-child1">&nbsp;</div>
-                        <div class="funbox-child2">&nbsp;</div>
+                    <div class="aboutbox1">
+                        &nbsp;
                     </div>
-                        <div class="funbox-child-friend">
-                            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-                        </div><!-- funbox child -->
-                     <div class="funbox-child">
-                        <div class="funbox-child3">&nbsp;</div>
-                        <div class="funbox-child4">&nbsp;</div>
+                     <div class="para">
+                         <p>I learned HTML4.01 and CSS2 in junior high as a hobby. Don't ask me how it piqued my interest, though. That's a mystery.</p>
+                         <p>I would take an image, add a &lt;div&gt; color square on top at some opacity for text to be readable, and embed an iframe so the images are loaded only once. Atrocious but it worked. </p>
+                         <p>Transitioning to HTML5 and CSS3 was difficult at first. I initially thought semantic HTML was helpful, but not necessary. Oh, how wrong was I! Flexbox and the other new standards are revolutionary. No more table layouts! </p>
+                         <p>I wonder what the future holds.</p>
+                    </div><!-- funbox child -->
+                     <div class="aboutbox1">
+                        &nbsp;
                     </div>
-                    
                 </div><!-- funbox -->
             </main> <!-- don't touch the content below -->
         </div>
