--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+    <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <!-- css -->
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/about.css">
 </head>
 <body>
-    <h1> CONTACT </h1>
+    <div id="everything">
+        <div id="not-footer">
+            <header>
+                <h1>Jamie Hardesty</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="contact.html" class="current">Contact</a>
+                </nav>
+            </header>
+            <main> <!-- edit content below -->
+                <h2>Contact Me</h2>
+                <div class="funbox">
+                    <div class="aboutbox1">
+                        &nbsp;
+                    </div>
+                     <div class="para">
+                         <p class="ctrpls"><a href="https://twitter.com/jhardesty_dev" target="_blank">Do you tweet?</a></p>
+                         <p>If so, let's chat!</p>
+                    </div>
+                     <div class="aboutbox1">
+                        &nbsp;
+                    </div>
+                </div><!-- funbox -->
+            </main> <!-- don't touch the content below -->
+        </div>
+        <footer id="footer">
+            <nav>
+                <a href="contact.html">Contact Me</a>
+            </nav>
+        </footer>
+    </div>
 </body>
 </html>
