--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects by Jamie</title>
+    <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <!-- css -->
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/about.css">
 </head>
 <body>
-    <h1> PROJECTS </h1>
+    <div id="everything">
+        <div id="not-footer">
+            <header>
+                <h1>Jamie Hardesty</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="projects.html"  class="current">Projects</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </header>
+            <main> <!-- edit content below -->
+                <h2>My Projects</h2>
+                <div class="funbox">
+                    <div class="aboutbox1">
+                        &nbsp;
+                    </div>
+                     <div class="para">
+                         <p class="ctrpls">Currently, it's best to look at my <a href="https://codepen.io/jhardesty" target="_blank">CodePen</a> or <a href="https://github.com/jamiehardesty" target="_blank">Github</a>.</p>
+                    </div>
+                     <div class="aboutbox1">
+                        &nbsp;
+                    </div>
+                </div><!-- funbox -->
+            </main> <!-- don't touch the content below -->
+        </div>
+        <footer id="footer">
+            <nav>
+                <a href="contact.html">Contact Me</a>
+            </nav>
+        </footer>
+    </div>
 </body>
 </html>
