--- a/projects.html
+++ b/projects.html
@@ -27,18 +27,7 @@
                 </nav>
             </header>
             <main> <!-- edit content below -->
-                <h2>My Projects</h2>
-                <div class="funbox">
-                    <div class="aboutbox1">
-                        &nbsp;
-                    </div>
-                     <div class="para">
-                         <p class="ctrpls">Currently, it's best to look at my <a href="https://codepen.io/jhardesty" target="_blank">CodePen</a> or <a href="https://github.com/jamiehardesty" target="_blank">Github</a>.</p>
-                    </div>
-                     <div class="aboutbox1">
-                        &nbsp;
-                    </div>
-                </div><!-- funbox -->
+                <h2>My Projects</h2><p class="ctrpls">Currently, it's best to look at my <a href="https://codepen.io/jhardesty" target="_blank">CodePen</a> or <a href="https://github.com/jamiehardesty" target="_blank">Github</a>.</p>
             </main> <!-- don't touch the content below -->
         </div>
         <footer id="footer">
