--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Jamie Hardesty</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
@@ -47,8 +48,11 @@
     </main> <!-- don't touch the content below -->
     <footer>
         <nav>
-            <a href="contact.html">Contact Me</a>
-        </nav>
+            
+            <a href="contact.html">Contact Me</a><br>
+            <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
+			<a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+		</nav>
     </footer>
 </body>
 </html>
