--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Me!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
@@ -35,9 +36,13 @@
                 <p>I wonder what the future holds.</p>
             </main> <!-- don't touch the content below -->
         </div>
-        <footer id="footer">
+        <footer id="#footer">
             <nav>
-                <a href="contact.html">Contact Me</a>
+                <a href="contact.html">Contact Me</a><br>
+                <div>
+                <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
+                <a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+                </div>
             </nav>
         </footer>
     </div>
