--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
             </div><!-- funbox -->
         </div><!-- mainbox -->
     </main> <!-- don't touch the content below -->
-    <footer>
+    <footer id="#footer">
         <nav>
-            
             <a href="contact.html">Contact Me</a><br>
+            <div>
             <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
-			<a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+            <a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+            </div>
 		</nav>
     </footer>
 </body>
