Added more spacing to my code per TL; moved a stylesheet to the bottom

--- a/about.html
+++ b/about.html
@@ -1,20 +1,30 @@
 <!-- stretch: CSS animations -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Me!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Who Is Jamie Hardesty?</title>
+    
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
         <link rel="stylesheet" type="text/css" href="style/about.css">
+
+
+    <!-- social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
     <div id="everything">
@@ -29,6 +39,8 @@
                 </nav>
             </header>
             <main> <!-- edit content below -->
+
+
                 <h2>Who Am I?</h2>
                 <p>I learned HTML4.01 and CSS2 in junior high as a hobby. Don't ask me how it piqued my interest, though. That's a mystery.</p>
                 <p>I would take an image, add a &lt;div&gt; color square on top at some opacity for text to be readable, and embed an iframe so the images are loaded only once. Atrocious but it worked. </p>
@@ -36,6 +48,8 @@
                 <p>I wonder what the future holds.</p>
             </main> <!-- don't touch the content below -->
         </div>
+
+        
         <footer id="#footer">
             <nav>
                 <a href="contact.html">Contact Me</a><br>
