--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!-- stretch: CSS animations -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Jamie Hardesty</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Meet Jamie</title>
+    
     <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/about.css">
+
+
+    <!-- social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
     <header>
@@ -24,6 +37,8 @@
         </nav>
     </header>
     <main> <!-- edit content below -->
+
+
         <div>
             <section>
                 <h2>Introducing My Site</h2>
@@ -34,6 +49,8 @@
             <div class="mainbox-visible">
                 <p>&nbsp;</p>
             </div><!-- mainbox, visible -->
+
+
             <div class="funbox">
                 <div class="funbox-child">
                     <div class="funbox-child1">&nbsp;</div>
@@ -44,9 +61,13 @@
                 <div class="funbox-child-friend">
                     <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
                 </div><!-- funbox child -->
+
+                
             </div><!-- funbox -->
         </div><!-- mainbox -->
     </main> <!-- don't touch the content below -->
+
+
     <footer id="#footer">
         <nav>
             <a href="contact.html">Contact Me</a><br>
