--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,30 @@
 <!-- stretch: CSS animations -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects by Jamie</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Curious about my projects?</title>
+    
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
         <link rel="stylesheet" type="text/css" href="style/about.css">
+
+
+    <!-- social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
     <div id="everything">
@@ -29,9 +39,13 @@
                 </nav>
             </header>
             <main> <!-- edit content below -->
+
+
                 <h2>My Projects</h2><p class="ctrpls">Currently, it's best to look at my <a href="https://codepen.io/jhardesty" target="_blank">CodePen</a> or <a href="https://github.com/jamiehardesty" target="_blank">Github</a>.</p>
             </main> <!-- don't touch the content below -->
         </div>
+
+        
         <footer id="#footer">
             <nav>
                 <a href="contact.html">Contact Me</a><br>
