--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,30 @@
 <!-- stretch: CSS animations -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Let's Chat!</title>
+    
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+
     <!-- css -->
         <link rel="stylesheet" type="text/css" href="style/reset.css">
         <link rel="stylesheet" type="text/css" href="style/index.css">
         <link rel="stylesheet" type="text/css" href="style/about.css">
+
+
+    <!-- social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
     <div id="everything">
@@ -29,10 +39,14 @@
                 </nav>
             </header>
             <main> <!-- edit content below -->
+
+
                 <h2>Contact Me</h2>
                 <p class="ctrpls"><a href="https://twitter.com/jhardesty_dev" target="_blank">Do you tweet?</a></p>
             </main> <!-- don't touch the content below -->
         </div>
+
+        
         <footer id="#footer">
             <nav>
                 <a href="contact.html">Contact Me</a><br>
