Added a new class to 2 pages so the footer stays at the bottom of the window

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                     <a href="contact.html" class="current">Contact</a>
                 </nav>
             </header>
-            <main> <!-- edit content below -->
+            <main class="vh-2pages"> <!-- edit content below -->
 
 
                 <h2>Contact Me</h2>
@@ -51,8 +51,8 @@
             <nav>
                 <a href="contact.html">Contact Me</a><br>
                 <div>
-                <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
-                <a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+                <a href="https://twitter.com/jhardesty_dev" target="_blank" class="fa fa-twitter"></a>
+                <a href="https://codepen.io/jhardesty" target="_blank" class="fa fa-codepen"></a>
                 </div>
             </nav>
         </footer>
