--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
         <nav>
             <a href="contact.html">Contact Me</a><br>
             <div>
-            <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
-            <a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+            <a href="https://twitter.com/jhardesty_dev" target="_blank" class="fa fa-twitter"></a>
+            <a href="https://codepen.io/jhardesty" target="_blank" class="fa fa-codepen"></a>
             </div>
-		</nav>
+        </nav>
     </footer>
+</div>
 </body>
 </html>
