--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </header>
-            <main> <!-- edit content below -->
+            <main class="vh-2pages"> <!-- edit content below -->
 
 
                 <h2>My Projects</h2><p class="ctrpls">Currently, it's best to look at my <a href="https://codepen.io/jhardesty" target="_blank">CodePen</a> or <a href="https://github.com/jamiehardesty" target="_blank">Github</a>.</p>
@@ -50,8 +50,8 @@
             <nav>
                 <a href="contact.html">Contact Me</a><br>
                 <div>
-                <a href="https://twitter.com/jhardesty_dev" class="fa fa-twitter"></a>
-                <a href="https://codepen.io/jhardesty" class="fa fa-codepen"></a>
+                <a href="https://twitter.com/jhardesty_dev" target="_blank" class="fa fa-twitter"></a>
+                <a href="https://codepen.io/jhardesty" target="_blank" class="fa fa-codepen"></a>
                 </div>
             </nav>
         </footer>
