--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- stretch: CSS animations -->
+<!-- Unit 1 - Stretch: CSS animations & Netlify -->
 
 
 <!DOCTYPE html>
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Jamie</title>
+    <!-- media inquiries -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
