--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curious about my projects?</title>
+
+    <!-- media inquiries -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> 
