--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-    <div id="everything">
+    <div id="everything" class="favoritecolor">
         <div id="not-footer">
             <header>
                 <h1>Jamie Hardesty</h1>
@@ -53,7 +53,7 @@
         </div>
 
         
-        <footer id="#footer">
+        <footer id="#footer" class="footer-different">
             <nav>
                 <a href="contact.html">Contact Me</a><br>
                 <div>
